# axon-mail

./: .env  .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: config.rs  llm.rs  mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  style-minimal.css  style-optimized.css  style-reduced.css  style.css
frontend/src/components/: ai_search.rs  email_search.rs  header.rs  mod.rs  search_card.rs  search_form.rs  search_interface.rs  sidebar.rs
