[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.64", features = ["HtmlSelectElement", "HtmlInputElement"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
dotenvy = "0.15.7"